@@ -1,0 +1,68 @@
+frame3dd-ex1 --- a planar frame  (N, mm, tonne, s)
+# ______________________________________________________________________
+# DUKE UNIVERSITY ---- Dept. of Civil and Environmental Engineering
+# CE 131L. Matrix Structural Analysis                        Fall 2009
+# ______________________________________________________________________
+
+#	INPUT  FILE  DESCRIPTION  FOR  PROGRAM  FRAME3DD  --  EXAMPLE 1
+#	http://frame3dd.sourceforge.net
+
+
+
+# joint data ...
+
+4  				# number of joints
+#.joint       X-coord  Y-coord  Z-coord  radius
+#                mm       mm       mm      mm
+  1               0        0        0       0	
+  2               0      800        0       0
+  3            1000      800        0       0
+  4            1000        0        0       0
+
+
+# reaction data ...
+
+2				# number of joints with reactions 
+#.joint      X  Y  Z  XX YY ZZ  reactions ( 0: free   1: fixed )
+  1          1  1  1   1  1  0
+  4          0  1  1   1  1  0		
+
+
+# frame element data ...
+
+3                               # number of frame elements
+#.element j1 j2    Ax    Ay   Az     Jx    Iy     Iz     E    G    p
+#                 mm^2  mm^2 mm^2   mm^4  mm^4   mm^4   N/mm N/mm  deg
+  1        1  2   200   100  100    1e6   1e6    4e4    2e5  8e4   0
+  2        2  3   200   100  100    1e6   1e6   10e4    2e5  8e4   0
+  3        4  3   200   100  100    1e6   1e6    6e4    2e5  8e4   0
+
+
+0				# 0: neglect shear deformations,  1: include 
+0                               # 0: neglect geometric stiffness, 1: include
+
+				# graphical output data information:
+10				# deflection exageration factor
+
+# load data ...
+				
+1                               # number of static load cases
+ 1				# number of concentrated joint loads
+#.joint  X-load Y-load Z-load X-mom Y-mom Z-mom
+#          N         
+  2     1500    0      0      0     0     0   
+
+1				# number of uniformly distributed loads
+#.element X-frc/lngth  Y-frc/lngth  Z-frc/lngth
+#             N/mm         N/mm         N/mm
+  2            0          -5.0           0	
+
+0				# number of trapizoidally distributed loads
+0				# number of interior point loads
+0				# number of temperature loads
+0				# number of prescribed displacements
+
+0                               # number of desired vibratory modes
+
+# to perform the analysis open a terminal and type: 
+# frame3dd  frame3dd-ex1.3dd  frame3dd-ex2.out
