@@ -1,107 +1,0 @@
-Example frm1
-
-4 
- 1  0  0  0  0	
- 2  0  8  0  0	
- 3  10 8  0  0
- 4  10 0  0  0
-
-2	
- 1   1 1 1 1 1 0	
- 4   0 1 1 1 1 0	
-
-3
- 1  1  2  1000 10 10 10 1000  40 100 120 0
- 2  2  3  1000 10 10 10 1000 100 100 120 0
- 3  3  4  1000 10 10 10 1000  60 100 120 0
-
-
-0	
-0
-10
-1	
-
-1
- 1		
-  2   1.5   0   0   0   0   0 
-
- 1			
-  2    0  -1.2   0
-
- 0		
- 0		
- 0	
- 0	
-
-0
-
-
-
-________________________________________________________________________________
-FRAME3DD version: 20081230               http://frame3dd.sf.net/
-GPL Copyright (C) 1992-2008, Henri P. Gavin 
-FRAME3DD is distributed in the hope that it will be useful but with no warranty.
-For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
-________________________________________________________________________________
-
-Example frm1 
-Tue Dec 30 11:01:22 2008
-________________________________________________________________________________
-4 JOINTS;    3 MEMBERS;    1 LOAD CASES;
-2 FIXED JOINTS;   -1081520664 PRESCRIBED DISPLACEMENTS;
-For 2D problems, the Y-axis is vertical. 
-For 3D problems, the Z-axis is vertical. 
-________________________________________________________________________________
-J O I N T   D A T A                                         R E S T R A I N T S
-  Joint      X              Y              Z         radius  Fx Fy Fz Mx My Mz
-    1       0.000000       0.000000       0.000000    0.000   1  1  1  1  1  0
-    2       0.000000       8.000000       0.000000    0.000   0  0  0  0  0  0
-    3      10.000000       8.000000       0.000000    0.000   0  0  0  0  0  0
-    4      10.000000       0.000000       0.000000    0.000   0  1  1  1  1  0
-M E M B E R   D A T A							(local)
-  Member J1    J2     Ax   Asy   Asz    Jxx     Iyy     Izz       E       G roll
-    1     1     2 1000.0  10.0  10.0   10.0  1000.0    40.0    100.0   120.0   0
-    2     2     3 1000.0  10.0  10.0   10.0  1000.0   100.0    100.0   120.0   0
-    3     3     4 1000.0  10.0  10.0   10.0  1000.0    60.0    100.0   120.0   0
-  Neglect shear deformations.
-  Neglect geometric stiffness.
-
-L O A D   C A S E   1   O F   1  ... 
-
-   1 joints  with concentrated loads
-   1 members with uniformly distributed loads
-   0 members with concentrated point loads
-   0 members with temperature loads
-   0 joints  with prescribed displacements
- J O I N T   L O A D S  +  E Q U I V A L E N T   J O I N T   L O A D S  (global)
-  Joint       Fx          Fy          Fz          Mxx         Myy         Mzz
-     2       1.500      -6.000       0.000       0.000       0.000     -10.000
-     3       0.000      -6.000       0.000       0.000       0.000      10.000
- U N I F O R M   M E M B E R   L O A D S					(local)
-  Member      Wx               Wy               Wz
-     2       0.00000000      -1.20000000       0.00000000
-
-E L A S T I C   S T I F F N E S S   A N A L Y S I S   via  L D L'  decomposition
-
-
-L O A D   C A S E   1   O F   1  ... 
-
-J O I N T   D I S P L A C E M E N T S					(global)
-  Joint    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1    0.0         0.0         0.0         0.0         0.0        -0.021019
-     2    0.136154   -0.000384    0.0         0.0         0.0        -0.009019
-     3    0.136154   -0.000576    0.0         0.0         0.0         0.006981
-     4    0.192000    0.0         0.0         0.0         0.0         0.006981
-M E M B E R   E N D   F O R C E S					(local)
-  Member Joint      Nx          Vy         Vz         Txx        Myy        Mzz
-     1      1      4.800c      1.500      0.0        0.0        0.0        0.0  
-     1      2     -4.800c     -1.500      0.0        0.0        0.0       12.000
-     2      2      0.0         4.800      0.0        0.0        0.0      -12.000
-     2      3      0.0         7.200      0.0        0.0        0.0        0.0  
-     3      3      7.200c      0.0        0.0        0.0        0.0        0.0  
-     3      4     -7.200c      0.0        0.0        0.0        0.0        0.0  
-R E A C T I O N S							(global)
-  Joint       Fx          Fy          Fz         Mxx         Myy         Mzz
-     1      -1.500       4.800       0.0         0.0         0.0         0.0  
-     4       0.0         7.200       0.0         0.0         0.0         0.0  
-R M S   E Q U I L I B R I U M    E R R O R: 1.061e-15
