@@ -1,95 +1,0 @@
-Example frm2
-
-3
- 1   0.0  0.0  0.0  0.0	
- 2   6.0  0.0  0.0  0.0
- 3   6.0  0.0  4.0  0.0
-
-1
- 1	1 1 1 1 1 1		
-
-2
- 1 1 2 10. 9. 9. 19.22 9.61 9.61  30e3 12e3  0
- 2 2 3 10. 9. 9. 19.22 9.61 9.61  30e3 12e3  0
-
-
-0			
-0
-				
-1000	
-
-1
-
-1
- 2
-  2   0  0   0.8  0  0  0
-  3   0 -0.5 0    0  0  0
-
-0		
-0		
-0	
-0
-0
-
-0
-
-
-
-________________________________________________________________________________
-FRAME3DD version: 20081230               http://frame3dd.sf.net/
-GPL Copyright (C) 1992-2008, Henri P. Gavin 
-FRAME3DD is distributed in the hope that it will be useful but with no warranty.
-For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
-________________________________________________________________________________
-
-Example frm2 
-Tue Dec 30 11:04:12 2008
-________________________________________________________________________________
-3 JOINTS;    2 MEMBERS;    1 LOAD CASES;
-1 FIXED JOINTS;   -1081235928 PRESCRIBED DISPLACEMENTS;
-For 2D problems, the Y-axis is vertical. 
-For 3D problems, the Z-axis is vertical. 
-________________________________________________________________________________
-J O I N T   D A T A                                         R E S T R A I N T S
-  Joint      X              Y              Z         radius  Fx Fy Fz Mx My Mz
-    1       0.000000       0.000000       0.000000    0.000   1  1  1  1  1  1
-    2       6.000000       0.000000       0.000000    0.000   0  0  0  0  0  0
-    3       6.000000       0.000000       4.000000    0.000   0  0  0  0  0  0
-M E M B E R   D A T A							(local)
-  Member J1    J2     Ax   Asy   Asz    Jxx     Iyy     Izz       E       G roll
-    1     1     2   10.0   9.0   9.0   19.2     9.6     9.6  30000.0 12000.0   0
-    2     2     3   10.0   9.0   9.0   19.2     9.6     9.6  30000.0 12000.0   0
-  Neglect shear deformations.
-  Neglect geometric stiffness.
-
-L O A D   C A S E   1   O F   1  ... 
-
-   2 joints  with concentrated loads
-   0 members with uniformly distributed loads
-   0 members with concentrated point loads
-   0 members with temperature loads
-   0 joints  with prescribed displacements
- J O I N T   L O A D S  +  E Q U I V A L E N T   J O I N T   L O A D S  (global)
-  Joint       Fx          Fy          Fz          Mxx         Myy         Mzz
-     2       0.000       0.000       0.800       0.000       0.000       0.000
-     3       0.000      -0.500       0.000       0.000       0.000       0.000
-
-E L A S T I C   S T I F F N E S S   A N A L Y S I S   via  L D L'  decomposition
-
-
-L O A D   C A S E   1   O F   1  ... 
-
-J O I N T   D I S P L A C E M E N T S					(global)
-  Joint    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     2    0.0        -0.000125    0.000200    0.000052   -0.000050   -0.000031
-     3   -0.000200   -0.000370    0.000200    0.000066   -0.000050   -0.000031
-M E M B E R   E N D   F O R C E S					(local)
-  Member Joint      Nx          Vy         Vz         Txx        Myy        Mzz
-     1      1      0.0         0.500     -0.800     -2.000      4.800      3.000
-     1      2      0.0        -0.500      0.800      2.000      0.0        0.0  
-     2      2      0.0         0.500      0.0        0.0        0.0        2.000
-     2      3      0.0        -0.500      0.0        0.0        0.0        0.0  
-R E A C T I O N S							(global)
-  Joint       Fx          Fy          Fz         Mxx         Myy         Mzz
-     1       0.0         0.500      -0.800      -2.000       4.800       3.000
-R M S   E Q U I L I B R I U M    E R R O R: 2.765e-15
